Fix projects icons layout issues

--- a/components/root/projects/projects.module.css
+++ b/components/root/projects/projects.module.css
@@ -63,7 +63,6 @@
 .projects .card {
     display: flex;
     flex-direction: row;
-    justify-content: center;
     align-items: center;
     border-radius: 8px;
     border: 1px solid var(--divider);
@@ -78,7 +77,6 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    margin: auto;
     max-width: 80px;
     padding: .4rem .6rem .4rem .8rem;
 }
@@ -158,7 +156,7 @@
     }
 }
 
-@media (min-width: 660px) {
+@media (min-width: 640px) {
     .projects .grid {
         grid-template-columns: repeat(2, 1fr);
     }
